recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: value :: is not a member of Int
var rep = l(0)::l(l.length-2)
              ^